@@ -1,39 +1,37 @@
-/* 
-Copyright 2020, 2021, 2023 WeAreFrank! 
+/*
+Copyright 2020, 2021, 2023 WeAreFrank!
 
-Licensed under the Apache License, Version 2.0 (the "License"); 
-you may not use this file except in compliance with the License. 
-You may obtain a copy of the License at 
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0 
+    http://www.apache.org/licenses/LICENSE-2.0
 
-Unless required by applicable law or agreed to in writing, software 
-distributed under the License is distributed on an "AS IS" BASIS, 
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
-See the License for the specific language governing permissions and 
-limitations under the License. 
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 */
 
 package org.frankframework.frankdoc.model;
 
+import lombok.AccessLevel;
+import lombok.Getter;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.logging.log4j.Logger;
+import org.frankframework.frankdoc.Utils;
+import org.frankframework.frankdoc.util.LogUtil;
+import org.frankframework.frankdoc.wrapper.FrankClass;
+import org.frankframework.frankdoc.wrapper.FrankClassRepository;
+import org.frankframework.frankdoc.wrapper.FrankDocException;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
 import java.util.stream.Collectors;
-
-import org.apache.commons.lang3.StringUtils;
-import org.apache.logging.log4j.Logger;
-
-import lombok.AccessLevel;
-import lombok.Getter;
-import org.frankframework.frankdoc.wrapper.FrankClass;
-import org.frankframework.frankdoc.wrapper.FrankClassRepository;
-import org.frankframework.frankdoc.wrapper.FrankDocException;
-import org.frankframework.frankdoc.util.LogUtil;
-import org.frankframework.frankdoc.Utils;
 
 /**
  * Models a collection of FrankElement. The collection can be characterized by
@@ -43,29 +41,28 @@ import org.frankframework.frankdoc.Utils;
  * implementing classes of a modeled Java interface.
  *
  * @author martijn
- *
  */
 public class ElementType implements Comparable<ElementType> {
-	private static Logger log = LogUtil.getLogger(ElementType.class);
+	private static final Logger log = LogUtil.getLogger(ElementType.class);
 
 	private static final String JAVADOC_DEFAULT_CLASSNAME = "@ff.defaultElement";
 
 	private static final Comparator<ElementType> COMPARATOR =
-			Comparator.comparing(ElementType::getSimpleName).thenComparing(ElementType::getFullName);
+		Comparator.comparing(ElementType::getSimpleName).thenComparing(ElementType::getFullName);
 
-	private @Getter(AccessLevel.PACKAGE) List<FrankElement> members;
-	private @Getter boolean fromJavaInterface;
-	
+	private final @Getter(AccessLevel.PACKAGE) List<FrankElement> members;
+	private final @Getter boolean fromJavaInterface;
+
 	private static class InterfaceHierarchyItem {
-		private @Getter String fullName;
-		private @Getter String simpleName;
-		private @Getter Map<String, InterfaceHierarchyItem> parentInterfaces = new TreeMap<>();
+		private final @Getter String fullName;
+		private final @Getter String simpleName;
+		private final @Getter Map<String, InterfaceHierarchyItem> parentInterfaces = new TreeMap<>();
 
 		InterfaceHierarchyItem(FrankClass clazz) {
 			this.fullName = clazz.getName();
 			this.simpleName = clazz.getSimpleName();
-			if(clazz.isInterface()) {
-				for(FrankClass superInterface: clazz.getInterfaces()) {
+			if (clazz.isInterface()) {
+				for (FrankClass superInterface : clazz.getInterfaces()) {
 					InterfaceHierarchyItem superInterfaceHierarchyItem = new InterfaceHierarchyItem(superInterface);
 					parentInterfaces.put(superInterfaceHierarchyItem.getFullName(), superInterfaceHierarchyItem);
 				}
@@ -74,11 +71,11 @@ public class ElementType implements Comparable<ElementType> {
 
 		List<ElementType> findMatchingElementTypes(FrankDocModel model) {
 			ElementType currentMatch = model.findElementType(fullName);
-			if(currentMatch != null) {
-				return Arrays.asList(currentMatch);
+			if (currentMatch != null) {
+				return List.of(currentMatch);
 			}
 			List<ElementType> result = new ArrayList<>();
-			for(String parentKey: parentInterfaces.keySet()) {
+			for (String parentKey : parentInterfaces.keySet()) {
 				result.addAll(parentInterfaces.get(parentKey).findMatchingElementTypes(model));
 			}
 			return result;
@@ -99,20 +96,20 @@ public class ElementType implements Comparable<ElementType> {
 	}
 
 	private static String parseDefaultElementTag(FrankClass clazz, FrankClassRepository repository) {
-		String result = null;
 		String value = clazz.getJavaDocTag(JAVADOC_DEFAULT_CLASSNAME);
-		if(StringUtils.isBlank(value)) {
+		if (StringUtils.isBlank(value)) {
 			// null means the JavaDoc tag was not present - then nothing to do.
-			if(value != null) {
+			if (value != null) {
 				log.error("JavaDoc tag {} of interface [{}] should have a parameter", JAVADOC_DEFAULT_CLASSNAME, clazz.getName());
 			}
-		} else {
-			try {
-				FrankClass defaultClass = repository.findClass(value);
-				result = defaultClass.getName();
-			} catch(FrankDocException e) {
-				log.error("JavaDoc tag {} on interface [{}] does not point to a valid class: [{}]", JAVADOC_DEFAULT_CLASSNAME, clazz.getName(), value, e);
-			}
+			return null;
+		}
+		String result = null;
+		try {
+			FrankClass defaultClass = repository.findClass(value);
+			result = defaultClass.getName();
+		} catch (FrankDocException e) {
+			log.error("JavaDoc tag {} on interface [{}] does not point to a valid class: [{}]", JAVADOC_DEFAULT_CLASSNAME, clazz.getName(), value, e);
 		}
 		return result;
 	}
@@ -128,7 +125,7 @@ public class ElementType implements Comparable<ElementType> {
 	// This is not about FrankDocGroups, but about groups in the XSDs.
 	String getGroupName() {
 		String result = getSimpleName();
-		if(result.startsWith("I")) {
+		if (result.startsWith("I")) {
 			result = result.substring(1);
 		}
 		return result;
@@ -142,11 +139,11 @@ public class ElementType implements Comparable<ElementType> {
 		commonInterfaceHierarchy = new ArrayList<>();
 		commonInterfaceHierarchy.add(this);
 		ElementType nextCandidate = commonInterfaceHierarchy.get(commonInterfaceHierarchy.size() - 1).getNextCommonInterface(model);
-		while(nextCandidate != null) {
+		while (nextCandidate != null) {
 			commonInterfaceHierarchy.add(nextCandidate);
 			nextCandidate = commonInterfaceHierarchy.get(commonInterfaceHierarchy.size() - 1).getNextCommonInterface(model);
 		}
-		if(log.isTraceEnabled()) {
+		if (log.isTraceEnabled()) {
 			String commonInterfaceHierarchyStr = commonInterfaceHierarchy.stream().map(ElementType::getFullName).collect(Collectors.joining(", "));
 			log.trace("ElementType [{}] has common interface hierarchy [{}]", this.getFullName(), commonInterfaceHierarchyStr);
 		}
@@ -157,20 +154,20 @@ public class ElementType implements Comparable<ElementType> {
 	}
 
 	private ElementType getNextCommonInterface(FrankDocModel model) {
-		if(! fromJavaInterface) {
+		if (!fromJavaInterface) {
 			return null;
 		}
 		List<ElementType> candidates = new ArrayList<>();
-		for(String key: interfaceHierarchy.getParentInterfaces().keySet()) {
+		for (String key : interfaceHierarchy.getParentInterfaces().keySet()) {
 			candidates.addAll(interfaceHierarchy.getParentInterfaces().get(key).findMatchingElementTypes(model));
 		}
-		if(candidates.isEmpty()) {
+		if (candidates.isEmpty()) {
 			return null;
 		} else {
 			ElementType result = candidates.get(0);
-			if(candidates.size() >= 2) {
+			if (candidates.size() >= 2) {
 				log.error("There are multiple candidates for the next common interface of ElementType [{}], which are [{}]. Chose [{}]",
-						() -> getFullName(), () -> candidates.stream().map(ElementType::getFullName).collect(Collectors.joining(", ")), () -> result.getFullName());
+					this::getFullName, () -> candidates.stream().map(ElementType::getFullName).collect(Collectors.joining(", ")), result::getFullName);
 			}
 			return result;
 		}
@@ -181,9 +178,9 @@ public class ElementType implements Comparable<ElementType> {
 	 */
 	public List<FrankElement> getSyntax2Members() {
 		return members.stream()
-				.filter(frankElement -> ! frankElement.getXmlElementNames().isEmpty())
-				.sorted()
-				.collect(Collectors.toList());
+			.filter(frankElement -> !frankElement.getXmlElementNames().isEmpty())
+			.sorted()
+			.collect(Collectors.toList());
 	}
 
 	@Override
